--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
